// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConfigurationBar should match snapshot, expired 1`] = `
<Connect(AnnouncementBar)
  message={
    <React.Fragment>
      <React.Fragment>
        <img
          className="advisor-icon"
          src={null}
        />
        <FormattedMessage
          defaultMessage="Enterprise license is expired and some features may be disabled."
          id="announcement_bar.error.license_expired"
        />
      </React.Fragment>
      <Memo(Connect(RenewalLink))
        telemetryInfo={
          Object {
            "error": "renew_license_banner_fail",
            "success": "renew_license_banner_success",
          }
        }
      />
    </React.Fragment>
  }
  tooltipMsg={
    <React.Fragment>
      <img
        className="advisor-icon"
        src={null}
      />
      <FormattedMessage
        defaultMessage="Enterprise license is expired and some features may be disabled."
        id="announcement_bar.error.license_expired"
      />
    </React.Fragment>
  }
  type="critical"
/>
`;

exports[`components/ConfigurationBar should match snapshot, expired, in grace period 1`] = `
<Connect(AnnouncementBar)
  message={
    <React.Fragment>
      <React.Fragment>
        <img
          className="advisor-icon"
          src={null}
        />
        <FormattedMessage
          defaultMessage="Enterprise license is expired and some features may be disabled."
          id="announcement_bar.error.license_expired"
        />
      </React.Fragment>
      <Memo(Connect(RenewalLink))
        telemetryInfo={
          Object {
            "error": "renew_license_banner_fail",
            "success": "renew_license_banner_success",
          }
        }
      />
    </React.Fragment>
  }
  tooltipMsg={
    <React.Fragment>
      <img
        className="advisor-icon"
        src={null}
      />
      <FormattedMessage
        defaultMessage="Enterprise license is expired and some features may be disabled."
        id="announcement_bar.error.license_expired"
      />
    </React.Fragment>
  }
  type="critical"
/>
`;

exports[`components/ConfigurationBar should match snapshot, expired, regular user 1`] = `
<Connect(AnnouncementBar)
  message={
    <React.Fragment>
      <img
        className="advisor-icon"
        src={null}
      />
      <FormattedMessage
        defaultMessage="Enterprise license is expired and some features may be disabled. Please contact your System Administrator for details."
        id="announcement_bar.error.past_grace"
      />
    </React.Fragment>
  }
  type="critical"
/>
`;

exports[`components/ConfigurationBar should match snapshot, show nothing 1`] = `""`;
